--- a/047_break_encr/Makefile
+++ b/047_break_encr/Makefile
@@ -1,8 +1,8 @@
 CFLAGS=-std=gnu99 -pedantic -Wall
 breaker: breaker.o
-	gcc - o myProgram breaker.o
-%.o : %.c
+	gcc -o breaker breaker.o
+%.o: %.c
 	gcc $(CFLAGS) -c $< 
 .PHONY: clean
 clean:
-	rm -f myProgram *.o *.c~ *.h~
+	rm -f breaker *.o *.c~ *.h~
