fixed valgrind error

--- a/096_binsrch/Makefile
+++ b/096_binsrch/Makefile
@@ -1,2 +1,2 @@
-test-bsearch: test-bsearch.cpp
-	g++ -pedantic -ggdb -Wall -Werror test-bsearch.cpp -o test-bsearch 
+test-bsearch: search.cpp  test-bsearch.cpp function.h
+	g++ -o test-bsearch -ggdb3 -Wall -Werror -pedantic -std=gnu++98 test-bsearch.cpp search.cpp
