--- a/096_binsrch/Makefile
+++ b/096_binsrch/Makefile
@@ -1,2 +1,2 @@
-test-bsearch: test-bsearch.cpp
-	g++ -pedantic -ggdb -Wall -Werror test-bsearch.cpp -o test-bsearch 
+test-bsearch:test-bsearch.cpp
+	g++ -o test-bsearch -Wall -Werror -std=gnu++98 test-bsearch.cpp
