--- a/097_bst_map/Makefile
+++ b/097_bst_map/Makefile
@@ -1,2 +1,2 @@
-test: test.cpp map.h bstmap.h
-	g++ -o test -ggdb3 -Wall -Werror -pedantic -std=gnu++98 test.cpp
+test: test2.cpp map.h bstmap.h
+	g++ -o test -ggdb3 -Wall -Werror -pedantic -std=gnu++98 test2.cpp
