basically completed half of step3

--- a/mp_miniproject/Makefile
+++ b/mp_miniproject/Makefile
@@ -1,5 +1,5 @@
 CPPFLAGS=-std=gnu++98 -pedantic -Wall -Werror -ggdb3
-ffosh.: ffosh.cpp cmd.h
+ffosh.: ffosh.cpp cmd.h shell.h
 	g++ -o ffosh. ffosh.cpp
 .PHONY: clean
 clean:
