--- a/mp_miniproject/Makefile
+++ b/mp_miniproject/Makefile
@@ -1,6 +1,6 @@
 CPPFLAGS=-std=gnu++98 -pedantic -Wall -Werror -ggdb3
 ffosh.: ffosh.cpp cmd.h shell.h
-	g++ -o ffosh. ffosh.cpp
+	g++ $(CPPFLAGS) -o ffosh. ffosh.cpp
 .PHONY: clean
 clean:
 	rm -f *.o *~ ffosh.
